Java/src/com/gmail/irclark2000/objc/parser/ObjCParser.java
// Generated from ObjC.g4 by ANTLR 4.0
package com.gmail.irclark2000.objc.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ObjCParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__114=1, T__113=2, T__112=3, T__111=4, T__110=5, T__109=6, T__108=7, 
		T__107=8, T__106=9, T__105=10, T__104=11, T__103=12, T__102=13, T__101=14, 
		T__100=15, T__99=16, T__98=17, T__97=18, T__96=19, T__95=20, T__94=21, 
		T__93=22, T__92=23, T__91=24, T__90=25, T__89=26, T__88=27, T__87=28, 
		T__86=29, T__85=30, T__84=31, T__83=32, T__82=33, T__81=34, T__80=35, 
		T__79=36, T__78=37, T__77=38, T__76=39, T__75=40, T__74=41, T__73=42, 
		T__72=43, T__71=44, T__70=45, T__69=46, T__68=47, T__67=48, T__66=49, 
		T__65=50, T__64=51, T__63=52, T__62=53, T__61=54, T__60=55, T__59=56, 
		T__58=57, T__57=58, T__56=59, T__55=60, T__54=61, T__53=62, T__52=63, 
		T__51=64, T__50=65, T__49=66, T__48=67, T__47=68, T__46=69, T__45=70, 
		T__44=71, T__43=72, T__42=73, T__41=74, T__40=75, T__39=76, T__38=77, 
		T__37=78, T__36=79, T__35=80, T__34=81, T__33=82, T__32=83, T__31=84, 
		T__30=85, T__29=86, T__28=87, T__27=88, T__26=89, T__25=90, T__24=91, 
		T__23=92, T__22=93, T__21=94, T__20=95, T__19=96, T__18=97, T__17=98, 
		T__16=99, T__15=100, T__14=101, T__13=102, T__12=103, T__11=104, T__10=105, 
		T__9=106, T__8=107, T__7=108, T__6=109, T__5=110, T__4=111, T__3=112, 
		T__2=113, T__1=114, T__0=115, DOTIDENTIFIER=116, IDENTIFIER=117, CHARACTER_LITERAL=118, 
		CSTRING_LITERAL=119, STRING_LITERAL=120, HEX_LITERAL=121, DECIMAL_LITERAL=122, 
		OCTAL_LITERAL=123, FLOATING_POINT_LITERAL=124, IMPORT=125, INCLUDE=126, 
		PRAGMA=127, WS=128, COMMENT=129, LINE_COMMENT=130;
	public static final String[] tokenNames = {
		"<INVALID>", "'self'", "'register'", "'*'", "'@synchronized'", "'double'", 
		"'inout'", "'}'", "'float'", "'char'", "'do'", "'auto'", "'*='", "'oneway'", 
		"')'", "'@trystatement'", "'unsigned'", "'@implementation'", "'goto'", 
		"'byref'", "'@property'", "'#ifdef'", "'@encode'", "'|'", "'!'", "'long'", 
		"'sizeof'", "'@protected'", "'short'", "'-='", "'in'", "','", "'while'", 
		"'@finally'", "'-'", "'if'", "'int'", "'?'", "'@optional'", "'bycopy'", 
		"'void'", "'>>='", "'...'", "'break'", "'+='", "'^='", "'else'", "'.+'", 
		"'struct'", "'++'", "'extern'", "'.'", "'+'", "'&&'", "'||'", "'>'", "'%='", 
		"'/='", "'switch'", "'/'", "'~'", "'out'", "'@throw'", "'&'", "'['", "'#ifndef'", 
		"'@end'", "'<'", "'--'", "'continue'", "'!='", "'<='", "'id'", "'<<'", 
		"'@selector'", "'@protocol'", "'case'", "'@package'", "'@synthesize'", 
		"'@dynamic'", "'super'", "'%'", "'->'", "'union'", "'signed'", "'@catch'", 
		"'='", "'const'", "'|='", "'enum'", "'@class'", "'<<='", "']'", "'default'", 
		"'@public'", "':'", "'('", "'&='", "'#endif'", "'{'", "'#undef'", "'static'", 
		"'#define'", "'>>'", "'^'", "'@private'", "'@required'", "'for'", "'return'", 
		"'typedef'", "';'", "'volatile'", "'@interface'", "'=='", "'#if'", "'>='", 
		"DOTIDENTIFIER", "IDENTIFIER", "CHARACTER_LITERAL", "CSTRING_LITERAL", 
		"STRING_LITERAL", "HEX_LITERAL", "DECIMAL_LITERAL", "OCTAL_LITERAL", "FLOATING_POINT_LITERAL", 
		"IMPORT", "INCLUDE", "PRAGMA", "WS", "COMMENT", "LINE_COMMENT"
	};
	public static final int
		RULE_translation_unit = 0, RULE_external_declaration = 1, RULE_preprocessor_declaration = 2, 
		RULE_define_statement = 3, RULE_macro_specification = 4, RULE_class_interface = 5, 
		RULE_category_interface = 6, RULE_class_implementation = 7, RULE_category_implementation = 8, 
		RULE_protocol_declaration = 9, RULE_protocol_declaration_list = 10, RULE_protocol_requirement = 11, 
		RULE_class_declaration_list = 12, RULE_class_list = 13, RULE_protocol_reference_list = 14, 
		RULE_protocol_list = 15, RULE_property_declaration = 16, RULE_property_attributes_declaration = 17, 
		RULE_property_attributes_list = 18, RULE_property_attribute = 19, RULE_class_name = 20, 
		RULE_superclass_name = 21, RULE_category_name = 22, RULE_protocol_name = 23, 
		RULE_instance_variables = 24, RULE_visibility_specification = 25, RULE_interface_declaration_list = 26, 
		RULE_class_method_declaration = 27, RULE_instance_method_declaration = 28, 
		RULE_method_declaration = 29, RULE_implementation_definition_list = 30, 
		RULE_implementation_definition = 31, RULE_class_method_definition = 32, 
		RULE_instance_method_definition = 33, RULE_method_definition = 34, RULE_method_selector = 35, 
		RULE_keyword_declarator = 36, RULE_selector = 37, RULE_method_type = 38, 
		RULE_property_implementation = 39, RULE_property_synthesize_list = 40, 
		RULE_property_synthesize_item = 41, RULE_type_specifier = 42, RULE_other_type_specifier = 43, 
		RULE_unusual_type_specifier = 44, RULE_simple_type_specifier = 45, RULE_primitive_type_specifier = 46, 
		RULE_type_qualifier = 47, RULE_protocol_qualifier = 48, RULE_primary_expression = 49, 
		RULE_simple_expression = 50, RULE_parenthetical_expression = 51, RULE_self_expression = 52, 
		RULE_unsupported_instruction = 53, RULE_string_constant = 54, RULE_message_expression = 55, 
		RULE_receiver = 56, RULE_message_selector = 57, RULE_keyword_argument = 58, 
		RULE_selector_expression = 59, RULE_selector_name = 60, RULE_protocol_expression = 61, 
		RULE_encode_expression = 62, RULE_exception_declarator = 63, RULE_try_statement = 64, 
		RULE_catch_statement = 65, RULE_finally_statement = 66, RULE_throw_statement = 67, 
		RULE_try_block = 68, RULE_synchronized_statement = 69, RULE_function_definition = 70, 
		RULE_declaration_minus_semi = 71, RULE_declaration = 72, RULE_declaration_specifiers = 73, 
		RULE_declaration_specifier = 74, RULE_storage_class_specifier = 75, RULE_init_declarator_list = 76, 
		RULE_init_declarator = 77, RULE_struct_or_union_specifier = 78, RULE_struct_declaration = 79, 
		RULE_specifier_qualifier_list = 80, RULE_specifier_qualifier = 81, RULE_struct_declarator_list = 82, 
		RULE_struct_declarator = 83, RULE_enum_specifier = 84, RULE_enumerator_list = 85, 
		RULE_enumerator = 86, RULE_declarator = 87, RULE_direct_declarator = 88, 
		RULE_declarator_suffix = 89, RULE_parameter_list = 90, RULE_parameter_declaration = 91, 
		RULE_initializer = 92, RULE_type_name = 93, RULE_abstract_declarator = 94, 
		RULE_abstract_declarator_suffix = 95, RULE_parameter_declaration_list = 96, 
		RULE_statement_list = 97, RULE_statement = 98, RULE_semi_statement = 99, 
		RULE_labeled_statement = 100, RULE_compound_statement = 101, RULE_compound_statement_parts = 102, 
		RULE_selection_statement = 103, RULE_while_statement = 104, RULE_for_statement = 105, 
		RULE_do_while_statement = 106, RULE_for_complete = 107, RULE_for_declaration_complete = 108, 
		RULE_jump_statement = 109, RULE_setter_call = 110, RULE_getter_call = 111, 
		RULE_dotidentifier = 112, RULE_expression = 113, RULE_assignment_expression = 114, 
		RULE_assignment_operator = 115, RULE_conditional_expression = 116, RULE_constant_expression = 117, 
		RULE_logical_or_expression = 118, RULE_logical_and_expression = 119, RULE_inclusive_or_expression = 120, 
		RULE_exclusive_or_expression = 121, RULE_and_expression = 122, RULE_equality_expression = 123, 
		RULE_equality_op = 124, RULE_relational_expression = 125, RULE_relational_op = 126, 
		RULE_shift_expression = 127, RULE_shift_op = 128, RULE_additive_expression = 129, 
		RULE_add_op = 130, RULE_multiplicative_expression = 131, RULE_multiply_op = 132, 
		RULE_cast_expression = 133, RULE_unary_expression = 134, RULE_unary_operator = 135, 
		RULE_postfix_expression = 136, RULE_postfix_expression_complete = 137, 
		RULE_comment = 138, RULE_argument_expression_list = 139, RULE_identifier = 140, 
		RULE_constant = 141;
	public static final String[] ruleNames = {
		"translation_unit", "external_declaration", "preprocessor_declaration", 
		"define_statement", "macro_specification", "class_interface", "category_interface", 
		"class_implementation", "category_implementation", "protocol_declaration", 
		"protocol_declaration_list", "protocol_requirement", "class_declaration_list", 
		"class_list", "protocol_reference_list", "protocol_list", "property_declaration", 
		"property_attributes_declaration", "property_attributes_list", "property_attribute", 
		"class_name", "superclass_name", "category_name", "protocol_name", "instance_variables", 
		"visibility_specification", "interface_declaration_list", "class_method_declaration", 
		"instance_method_declaration", "method_declaration", "implementation_definition_list", 
		"implementation_definition", "class_method_definition", "instance_method_definition", 
		"method_definition", "method_selector", "keyword_declarator", "selector", 
		"method_type", "property_implementation", "property_synthesize_list", 
		"property_synthesize_item", "type_specifier", "other_type_specifier", 
		"unusual_type_specifier", "simple_type_specifier", "primitive_type_specifier", 
		"type_qualifier", "protocol_qualifier", "primary_expression", "simple_expression", 
		"parenthetical_expression", "self_expression", "unsupported_instruction", 
		"string_constant", "message_expression", "receiver", "message_selector", 
		"keyword_argument", "selector_expression", "selector_name", "protocol_expression", 
		"encode_expression", "exception_declarator", "try_statement", "catch_statement", 
		"finally_statement", "throw_statement", "try_block", "synchronized_statement", 
		"function_definition", "declaration_minus_semi", "declaration", "declaration_specifiers", 
		"declaration_specifier", "storage_class_specifier", "init_declarator_list", 
		"init_declarator", "struct_or_union_specifier", "struct_declaration", 
		"specifier_qualifier_list", "specifier_qualifier", "struct_declarator_list", 
		"struct_declarator", "enum_specifier", "enumerator_list", "enumerator", 
		"declarator", "direct_declarator", "declarator_suffix", "parameter_list", 
		"parameter_declaration", "initializer", "type_name", "abstract_declarator", 
		"abstract_declarator_suffix", "parameter_declaration_list", "statement_list", 
		"statement", "semi_statement", "labeled_statement", "compound_statement", 
		"compound_statement_parts", "selection_statement", "while_statement", 
		"for_statement", "do_while_statement", "for_complete", "for_declaration_complete", 
		"jump_statement", "setter_call", "getter_call", "dotidentifier", "expression", 
		"assignment_expression", "assignment_operator", "conditional_expression", 
		"constant_expression", "logical_or_expression", "logical_and_expression", 
		"inclusive_or_expression", "exclusive_or_expression", "and_expression", 
		"equality_expression", "equality_op", "relational_expression", "relational_op", 
		"shift_expression", "shift_op", "additive_expression", "add_op", "multiplicative_expression", 
		"multiply_op", "cast_expression", "unary_expression", "unary_operator", 
		"postfix_expression", "postfix_expression_complete", "comment", "argument_expression_list", 
		"identifier", "constant"
	};

	@Override
	public String getGrammarFileName() { return "ObjC.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public ObjCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Translation_unitContext extends ParserRuleContext {
		public List<External_declarationContext> external_declaration() {
			return getRuleContexts(External_declarationContext.class);
		}
		public TerminalNode EOF() { return getToken(ObjCParser.EOF, 0); }
		public External_declarationContext external_declaration(int i) {
			return getRuleContext(External_declarationContext.class,i);
		}
		public Translation_unitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_translation_unit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjCListener ) ((ObjCListener)listener).enterTranslation_unit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjCListener ) ((ObjCListener)listener).exitTranslation_unit(this);
		}
	}

	public final Translation_unitContext translation_unit() throws RecognitionException {
		Translation_unitContext _localctx = new Translation_unitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_translation_unit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(285); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(284); external_declaration();
				}
				}
				setState(287); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 3) | (1L << 5) | (1L << 6) | (1L << 8) | (1L << 9) | (1L << 11) | (1L << 13) | (1L << 16) | (1L << 17) | (1L << 19) | (1L << 21) | (1L << 25) | (1L << 28) | (1L << 30) | (1L << 36) | (1L << 39) | (1L << 40) | (1L << 48) | (1L << 50) | (1L << 61))) != 0) || ((((_la - 65)) & ~0x3f) == 0 && ((1L << (_la - 65)) & ((1L << (65 - 65)) | (1L << (72 - 65)) | (1L << (75 - 65)) | (1L << (83 - 65)) | (1L << (84 - 65)) | (1L << (87 - 65)) | (1L << (89 - 65)) | (1L << (90 - 65)) | (1L << (96 - 65)) | (1L << (98 - 65)) | (1L << (100 - 65)) | (1L << (101 - 65)) | (1L << (102 - 65)) | (1L << (109 - 65)) | (1L << (111 - 65)) | (1L << (112 - 65)) | (1L << (114 - 65)) | (1L << (IDENTIFIER - 65)) | (1L << (IMPORT - 65)) | (1L << (INCLUDE - 65)))) != 0) );
			setState(289); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class External_declarationContext extends ParserRuleContext {
		public Protocol_declarationContext protocol_declaration() {
			return getRuleContext(Protocol_declarationContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Class_declaration_listContext class_declaration_list() {
			return getRuleContext(Class_declaration_listContext.class,0);
		}
		public Class_implementationContext class_implementation() {
			return getRuleContext(Class_implementationContext.class,0);
		}
		public Preprocessor_declarationContext preprocessor_declaration() {
			return getRuleContext(Preprocessor_declarationContext.class,0);
		}
		public Class_interfaceContext class_interface() {
			return getRuleContext(Class_interfaceContext.class,0);
		}
		public Function_definitionContext function_definition() {
			return getRuleContext(Function_definitionContext.class,0);
		}
		public Protocol_declaration_listContext protocol_declaration_list() {
			return getRuleContext(Protocol_declaration_listContext.class,0);
		}
		public Category_implementationContext category_implementation() {
			return getRuleContext(Category_implementationContext.class,0);
		}
		public Category_interfaceContext category_interface() {
			return getRuleContext(Category_interfaceContext.class,0);
		}
		public External_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObjCListener ) ((ObjCListener)listener).enterExternal_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObjCListener ) ((ObjCListener)listener).exitExternal_declaration(this);
		}
	}

	public final External_declarationContext external_declaration() throws RecognitionException {
		External_declarationContext _localctx = new External_declarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_external_declaration);
		try {
			setState(301);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(291); preprocessor_declaration();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(292); function_definition();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(293); declaration();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(294); class_interface();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(295); class_implementation();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(296); category_interface();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(297); category_implementation();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(298); protocol_declaration();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(299); protocol_declaration_list();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(300); class_declaration_list();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
